2005-05-28  Alfred M. Szmidt  <ams@gnu.org>

	* linux/src/drivers/scsi/u14-34f.c (ihdlr): Silence gcc 4.x
	errors.
	* linux/src/drivers/scsi/qlogicisp.h: Likewise.
	* linux/src/drivers/scsi/advansys.c: Likewise.
	(advansys_reset, advansys_interrupt, asc_scsi_done_list,
	(asc_enqueue, asc_dequeue, asc_dequeue_list, asc_rmqueue,
	(asc_isqueued): Likewise.
	* linux/src/drivers/scsi/53c78xx.c (NCR53c7xx_queue_command):
	Likewise.
	* linux/src/drivers/net/ne2k-pci.c (ne_block_input)
	(ne_block_output): Likewise.
	* linux/src/drivers/net/hp100.c (__initfunc): Likewise.
	* linux/src/drivers/net/3c507.c (el16_interrupt): Likewise.
	* linux/dev/drivers/scsi/seagate.c (seagate_st0x_queue_command):
	Likewise.

2005-05-26  Alfred M. Szmidt  <ams@gnu.org>

	* device/cons.h (cn_tab) [KERNEL]: Removed extern declaration.

	* linux/dev/include/linux/fs.h (super_blocks): Declare as an
	pointer.

2005-02-10  Guillem Jover  <guillem@hadrons.org>

	* linux/dev/glue/block.c (rdwr_partial): Remove leftover assert.

2005-01-22  Guillem Jover  <guillem@hadrons.org>

	* linux/dev/include/linux/skbuff.h (skb_put, skb_push): Fix errors
	for deprecated use of labels at end of compound statements.
	* i386/i386/fpe_linkage.c (enable_fpe): Declare prototype.

2005-01-22  Guillem Jover  <guillem@hadrons.org>

	* linux/src/drivers/scsi/qlogicisp_asm.c: Remove file with binary
	only firmware.
	* linux/src/drivers/scsi/qlogicisp.c: Do not include "qlogicisp_asm.c".
	(RELOAD_FIRMWARE): Set to 0.
	(risc_code_addr01): New variable from qlogicisp_asm.c.
	* linux/Files: Remove linux/src/drivers/scsi/qlogicisp_asm.c.

2004-09-08  Neal H. Walfield  <neal@cs.uml.edu>

	* linux/dev/kernel/printk.c: Include <kern/assert.h>.
	(printk): Use vsnprintf, not linux_vsprintf to avoid buffer
	overruns.

	* kern/printf.c (struct vsnprintf_cookie): New structure.
	(snputc): New function.
	(vsnprintf): Likewise.

2004-11-22  Guillem Jover  <guillem@hadrons.org>
